# CandlePredictionBot

./: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  logging_config.py  main.py  pyproject.toml  tg_bot.py  tradingview.py  websocketBybit.py
model/: gru_model.h5  gru_model_v2.h5  gru_model_v3.keras
