[tool.poetry]
name = "candle_prediction_bot"
version = "0.1.0"
description = ""
authors = ["Vladislav Ozhgibesov <vozhgibesov@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "==1.19.5"
scikit-learn = "==1.0"
tensorflow = "==2.6.0"
keras = "==2.6.0"
python-telegram-bot = "==13.7"
requests = "==2.26.0"
websocket-client = "==1.3.2"
keyboard = "==0.13.5"
tradingview_ta = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
