[tool.poetry]
name = "candle_prediction_bot"
version = "0.1.0"
description = ""
authors = ["Vladislav Ozhgibesov <vozhgibesov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
numpy = "1.24.3"
scikit-learn = "1.3.0"
tensorflow = "2.14.0"
keras = "2.14.0"
python-telegram-bot = "21.1.1"
requests = "2.31.0"
websocket-client = "1.7.0"
keyboard = "0.13.5"
tensorflow-io-gcs-filesystem = "0.31.0"
tradingview_ta = "3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"